--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.4",
+    "axios": "^1.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^0.2.4"
   },
@@ -38,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.54.0",
+    "eslint-plugin-example": "^1.2.0"
   }
 }
