--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "axios": "^1.6.2",
+    "axios": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
@@ -41,7 +42,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^5.16.0",
-    "eslint-plugin-example": "^1.2.0"
+    "eslint-config-react-app": "^7.0.1"
   }
 }
